Sotting Sport 109_Class

--- a/IFang-Program/Final_Project/Training_History.ipynb
+++ b/IFang-Program/Final_Project/Training_History.ipynb
@@ -1075,6 +1075,8 @@
    "source": [
     "##### 詳細模型架構\n",
     "\n",
+    "- base + 2 Layer (Dropout (0.1))\n",
+    "\n",
     "- optimizer='adam' ( Learning Rate = 0.05)\n",
     "\n",
     "- Epoch = 10"
@@ -1137,8 +1139,33 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### No.19 使用 EfficientNetB0 模型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.20 使用 MobileNetV2 模型 Dropout(0.1) (accuracy: 0.3097 loss: 2.9265)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 詳細模型架構\n",
+    "\n",
+    "- base + 2 Layer (Dropout (0.5))\n",
+    "\n",
+    "- optimizer='adam' ( Learning Rate = 0.05)\n",
+    "\n",
+    "- Epoch = 10"
    ]
   }
  ],
