DL-Final Project

--- a/IFang-Program/Final_Project/Training_History.ipynb
+++ b/IFang-Program/Final_Project/Training_History.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sequential"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### No.1 模仿老師 MNIST 訓練模型 ( loss: 6.2804, accuracy: 0.2349 kaggle: 0.24220 )"
    ]
   },
@@ -883,7 +890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### No.13 使用 Warmup "
+    "### No.13 使用 Warmup ( 效果蠻差的 )"
    ]
   },
   {
@@ -964,13 +971,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### No.15 使用 sgd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### No.16 層數對稱排列"
    ]
   },
@@ -999,6 +999,13 @@
     "# model.add(Dropout(0.25))\n",
     "# model.add(Dense(128, activation='relu'))\n",
     "# model.add(Dense(100, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MobilenetV2"
    ]
   },
   {
@@ -1145,13 +1152,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### No.19 使用 EfficientNetB0 模型"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### No.20 使用 MobileNetV2 模型 Dropout(0.1) (accuracy: 0.3097 loss: 2.9265)"
    ]
   },
@@ -1161,11 +1161,588 @@
    "source": [
     "##### 詳細模型架構\n",
     "\n",
-    "- base + 2 Layer (Dropout (0.5))\n",
+    "- base + 2 Layer (Dropout (0.1))\n",
     "\n",
-    "- optimizer='adam' ( Learning Rate = 0.05)\n",
+    "- optimizer='adam' ( Learning Rate = 0.005)\n",
     "\n",
     "- Epoch = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from tensorflow.keras.applications.mobilenet_v2 import MobileNetV2\n",
+    "\n",
+    "# base = MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# tf.keras.backend.clear_session()\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu'))\n",
+    "# model.add(Dropout(0.5))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu'))\n",
+    "# model.add(Dropout(0.5))\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.21 使用 MobileNetV2 模型 Dropout(0.2) (accuracy: 0.6193 loss: 1.3611 kaggle: 0.70311)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 詳細模型架構\n",
+    "- BSIZE = 64\n",
+    "\n",
+    "- base + 2 Layer (Dropout (0.2))\n",
+    "\n",
+    "- optimizer='adam' ( Learning Rate = 0.005)\n",
+    "\n",
+    "- Epoch = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = tf.keras.applications.mobilenet_v2.MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# tf.keras.backend.clear_session()\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu'))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu'))\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.25 使用 MobileNetV2 模型 調整 filter 數目 ( 效果沒有比較好 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = tf.keras.applications.mobilenet_v2.MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# tf.keras.backend.clear_session()\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# # model.add(BatchNormalization(axis= -1, momentum= 0.99, epsilon= 0.001))\n",
+    "# model.add(Dense(512, activation='relu', kernel_regularizer = l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(512, activation='relu', kernel_regularizer = l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.22 使用 MobileNetV2 模型 ( 1 Layer ) (accuracy: 0.5551 loss: 1.6889 kaggle: 0.63493)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 詳細模型架構\n",
+    "- BSIZE = 64\n",
+    "\n",
+    "- base + 1 Layer (Dropout (0.2))\n",
+    "\n",
+    "- optimizer='adam' ( Learning Rate = 0.005)\n",
+    "\n",
+    "- Epoch = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = tf.keras.applications.mobilenet_v2.MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# tf.keras.backend.clear_session()\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(512, activation='relu'))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.24 使用 MobileNetV2 模型 Dropout(0.3) (0.5405 loss: 1.7502 kaggle: 0.62)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = tf.keras.applications.mobilenet_v2.MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# tf.keras.backend.clear_session()\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(512, activation='relu'))\n",
+    "# model.add(Dropout(0.3))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# opt = Adam(learning_rate = LR)\n",
+    "# model.compile(loss='categorical_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "# history = model.fit(train_generator,\n",
+    "#                     validation_data=validation_generator,\n",
+    "#                     epochs=EPOCHS, \n",
+    "# #                   steps_per_epoch=train_generator.samples // train_generator.batch_size,\n",
+    "# #                   validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
+    "#                     callbacks=my_callbacks,\n",
+    "#                     verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.25 使用 MobileNetV2 模型 調整 filter 數目 ( 效果沒有比較好 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base = tf.keras.applications.mobilenet_v2.MobileNetV2(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# tf.keras.backend.clear_session()\n",
+    "    \n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# # model.add(BatchNormalization(axis= -1, momentum= 0.99, epsilon= 0.001))\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer = l2(L2)))\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 使用 MobileNetV2 模型 ( 更改全域變數) (accuracy: 0.6684 loss: 1.3281 kaggle: 0.73399) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 詳細模型架構\n",
+    "- L2 = 0.0001\n",
+    "\n",
+    "- BSIZE = 64\n",
+    "\n",
+    "- base + 1 Layer (Dropout (0.2))\n",
+    "\n",
+    "- optimizer='adam' ( Learning Rate = 0.001)\n",
+    "\n",
+    "- Epoch = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.add(Dense(512, activation='relu', kernel_regularizer=l2(1e-4)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(512, activation='relu', kernel_regularizer=l2(1e-4)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No.25 使用 MobileNetV3 模型 Dropout(0.2) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 其他模型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 resnet18 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = models.resnet18(weights=models.ResNet18_Weights.IMAGENET1K_V1)\n",
+    "# torch.manual_seed(42)\n",
+    "# model.fc = nn.Linear(model.fc.in_features, num_labels)\n",
+    "# model = model.to(device)\n",
+    "# print(\"Number of trainable parameters -\", sum(p.numel() for p in model.parameters() if p.requires_grad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 Vgg11 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = models.vgg11(weights=models.VGG11_Weights.IMAGENET1K_V1)\n",
+    "# torch.manual_seed(42)\n",
+    "# model.classifier[6] = nn.Linear(model.classifier[6].in_features, num_labels, bias=True)\n",
+    "# model = model.to(device)\n",
+    "# print(\"Number of trainable parameters -\", sum(p.numel() for p in model.parameters() if p.requires_grad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 Eficientnet_B1 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = models.efficientnet_b1(weights=models.EfficientNet_B1_Weights.IMAGENET1K_V2)\n",
+    "# torch.manual_seed(42)\n",
+    "# model.classifier[1] = nn.Linear(model.classifier[1].in_features, num_labels, bias=True)\n",
+    "# model = model.to(device)\n",
+    "# print(\"Number of trainable parameters -\", sum(p.numel() for p in model.parameters() if p.requires_grad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 Resnet50 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocess_input = keras.applications.resnet50.preprocess_input\n",
+    "# base_model = keras.applications.ResNet50(input_shape=(224,224,3), include_top=False, weights=\"imagenet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model=ResNet50(weights=\"imagenet\",include_top=False,input_shape=(180,180,3))\n",
+    "\n",
+    "# for layer in base_model.layers:\n",
+    "#   layer.trainable = False\n",
+    "\n",
+    "\n",
+    "# x = Flatten()(base_model.output)\n",
+    "# x = Dense(256, activation='relu')(x)\n",
+    "# output = Dense(100, activation='softmax')(x)\n",
+    "\n",
+    "# model_resnet50 = Model(inputs=base_model.input, outputs=output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model = ResNet50(weights=\"imagenet\", include_top=False, input_shape=(224,224,3))\n",
+    "\n",
+    "# # Freeze the base model layers (optional, can be fine-tuned later)\n",
+    "# for layer in base_model.layers:\n",
+    "#     layer.trainable = False\n",
+    "\n",
+    "# # Add custom layers for classification\n",
+    "# x = base_model.output\n",
+    "# x = GlobalAveragePooling2D()(x)\n",
+    "# x = Dense(256,activation='relu')(x)\n",
+    "# x = Dropout(0.2)(x)\n",
+    "# predictions = Dense(100,activation=\"softmax\")(x)  # Adjust output size for 500 species\n",
+    "\n",
+    "# # Create the final model\n",
+    "# model = Model(inputs=base_model.input, outputs=predictions)\n",
+    "\n",
+    "# # model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 EfficientNet_B3 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model = tf.keras.applications.efficientnet.EfficientNetB3(include_top= False, weights= \"imagenet\", input_shape= img_shape, pooling= 'max')\n",
+    "\n",
+    "# model = Sequential([\n",
+    "#     base_model,\n",
+    "#     BatchNormalization(axis= -1, momentum= 0.99, epsilon= 0.001),\n",
+    "#     Dense(256, kernel_regularizer= regularizers.l2(l= 0.016), activity_regularizer= regularizers.l1(0.006),\n",
+    "#                 bias_regularizer= regularizers.l1(0.006), activation= 'relu'),\n",
+    "#     Dropout(rate= 0.45, seed= 123),\n",
+    "#     Dense(class_count, activation= 'softmax')\n",
+    "# ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 Xception 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model_xception = Xception(weights='imagenet', include_top=False, input_shape=(224,224,3))\n",
+    "# # Create a Sequential model\n",
+    "# model_xception = Sequential()\n",
+    "\n",
+    "# # Adding the Xception base model\n",
+    "# model_xception.add(base_model_xception)\n",
+    "\n",
+    "# # Adding Global Average Pooling 2D layer\n",
+    "# model_xception.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# # Adding a Dense layer with 1024 units and 'relu' activation\n",
+    "# # model_xception.add(Dense(1024, activation='relu'))\n",
+    "\n",
+    "# # Adding Dropout layer with a dropout rate of 0.5\n",
+    "# model_xception.add(Dropout(0.25))\n",
+    "\n",
+    "# # Adding another Dense layer with 512 units and 'relu' activation\n",
+    "# # model_xception.add(Dense(512, activation='relu'))\n",
+    "\n",
+    "# # Adding Dropout layer with a dropout rate of 0.3\n",
+    "# # model_xception.add(Dropout(0.3))\n",
+    "\n",
+    "# # Adding the final Dense layer with 100 units and 'softmax' activation\n",
+    "# model_xception.add(Dense(100, activation='softmax'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### !No.19 使用 EfficientNetB0 模型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 VGG16 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model=VGG16(weights=\"imagenet\",include_top=False,input_shape=(180,180,3))\n",
+    "# base_model.trainable=False\n",
+    "# base_model.summary()\n",
+    "# x=normalization_layer(x)\n",
+    "# x=base_model(x)\n",
+    "# x=Flatten()(x)\n",
+    "# x=Dense(256,activation=\"relu\")(x)\n",
+    "# output=Dense(100,activation=\"softmax\")(x)\n",
+    "# model=Model(inputs_images,outputs=output)\n",
+    "# for layer in base_model.layers:\n",
+    "#     layer.trainable = False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model = VGG16(weights=\"imagenet\", include_top=False, input_shape=(224,224,3))\n",
+    "\n",
+    "# # Freeze the base model layers (optional, can be fine-tuned later)\n",
+    "# for layer in base_model.layers:\n",
+    "#     layer.trainable = False\n",
+    "\n",
+    "# # Add custom layers for classification\n",
+    "# x = base_model.output\n",
+    "# x = GlobalAveragePooling2D()(x)\n",
+    "# x = Dense(512,activation='relu')(x)\n",
+    "# x = Dense(512,activation='relu')(x)\n",
+    "# x = Dropout(0.2)(x)\n",
+    "# predictions = Dense(100,activation=\"softmax\")(x)  # Adjust output size for 500 species\n",
+    "\n",
+    "# # Create the final model\n",
+    "# model_vgg16 = Model(inputs=base_model.input, outputs=predictions)\n",
+    "# model_vgg16.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 DenseNet201"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pretrained_model3 = tf.keras.applications.DenseNet201(input_shape=(100,100,3),include_top=False,weights='imagenet',pooling='avg')\n",
+    "# pretrained_model3.trainable = False\n",
+    "# inputs3 = pretrained_model3.input\n",
+    "# x3 = tf.keras.layers.Dense(128, activation='relu')(pretrained_model3.output)\n",
+    "# outputs3 = tf.keras.layers.Dense(len(Name), activation='softmax')(x3)\n",
+    "# model = tf.keras.Model(inputs=inputs3, outputs=outputs3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( 還沒測試 ) 使用 Sequential 模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.add(Conv2D(filters=32, kernel_size=3, strides=1, padding='same', activation='relu', input_shape=[150, 150, 3]))\n",
+    "# model.add(MaxPooling2D(2))\n",
+    "# model.add(Conv2D(filters=64, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
+    "# model.add(MaxPooling2D(2))\n",
+    "# model.add(Conv2D(filters=128, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
+    "# model.add(MaxPooling2D(2))\n",
+    "# model.add(Conv2D(filters=64, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
+    "# model.add(MaxPooling2D(2))\n",
+    "# model.add(Conv2D(filters=32, kernel_size=3, strides=1, padding='same', activation='relu'))\n",
+    "# model.add(MaxPooling2D(2))\n",
+    "# # Flatten the feature map\n",
+    "# model.add(Flatten())\n",
+    "# # Add the fully connected layers\n",
+    "# model.add(Dense(128, activation='relu'))\n",
+    "# model.add(Dropout(0.25))\n",
+    "# model.add(Dense(128, activation='relu'))\n",
+    "# model.add(Dense(100, activation='softmax'))\n"
    ]
   }
  ],
