--- a/IFang-Program/Final_Project/Training_History.ipynb
+++ b/IFang-Program/Final_Project/Training_History.ipynb
@@ -1654,17 +1654,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base_model=VGG16(weights=\"imagenet\",include_top=False,input_shape=(180,180,3))\n",
-    "# base_model.trainable=False\n",
-    "# base_model.summary()\n",
-    "# x=normalization_layer(x)\n",
-    "# x=base_model(x)\n",
-    "# x=Flatten()(x)\n",
-    "# x=Dense(256,activation=\"relu\")(x)\n",
-    "# output=Dense(100,activation=\"softmax\")(x)\n",
-    "# model=Model(inputs_images,outputs=output)\n",
-    "# for layer in base_model.layers:\n",
-    "#     layer.trainable = False\n"
+    "# img_height = 224\n",
+    "# img_width = 224\n",
+    "# INPUT_SHAPE = (img_height, img_width, 3)\n",
+    "\n",
+    "# BSIZE = 64\n",
+    "# L2 = 0.0001\n",
+    "\n",
+    "# EPOCHS = 10\n",
+    "# LR = 0.001\n",
+    "# base = tf.keras.applications.VGG16(weights = 'imagenet', include_top = False, input_shape = INPUT_SHAPE)\n",
+    "# for layer in base.layers:\n",
+    "#     layer.trainable =  False\n",
+    "\n",
+    "# model = Sequential()\n",
+    "# model.add(base)\n",
+    "# model.add(GlobalAveragePooling2D())\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(256, activation='relu', kernel_regularizer=l2(L2)))\n",
+    "# model.add(BatchNormalization())\n",
+    "# model.add(Dropout(0.2))\n",
+    "\n",
+    "# model.add(Dense(len(train_generator.class_indices), activation='softmax'))\n",
+    "# model.summary()"
    ]
   },
   {
